--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed:run": "knex --knexfile knexfile.ts seed:run"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "knex": "^3.1.0",
     "next": "^16.0.7",
     "pg": "^8.16.3",
